# MVG

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
conan/profile/macos/: macos
conan/profile/windows/: windows-clang  windows-vs
conan/profiles/: macos  windows-clang  windows-vs
src/: CMakeLists.txt  main.cpp
src/camera_calibration/: CMakeLists.txt  camera_calibration.cc
src/numerics/: CMakeLists.txt  numerics.cc
tests/: CMakeLists.txt  first_test.cc  test.cc
